network.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Create a VPC, Subnet, Internet Gateway and attach the Internet Gateway to the VPC and create a route table and edit routes to allow internet access"

Resources:
  VPC01:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: VPC01

  Subnet01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC01
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-east-1a
      Tags:
      - Key: Name
        Value: Subnet01

  InternetGateway01:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: InternetGateway01

  VPCGatewayAttachment01:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway01
      VpcId: !Ref VPC01

  RouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC01
      Tags:
      - Key: Name
        Value: RouteTable01

  Route01:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway01

  SubnetRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet01
      RouteTableId: !Ref RouteTable01

  EC2Instance01:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-08a907777e5410897 # Windows Server 2019 Base
      InstanceType: t2.micro
      KeyName: TestKeyPair08
      NetworkInterfaces:
      - AssociatePublicIpAddress: true
        DeviceIndex: 0
        SubnetId: !Ref Subnet01
        GroupSet:
        - Fn::GetAtt:
          - SecurityGroup01
          - GroupId
      Tags:
      - Key: Name
        Value: EC2Instance01
      # UserData:
      #   Fn::Base64: !Sub |
      #     <powershell>
      #     Install-WindowsFeature -Name AD-Domain-Services -IncludeManagementTools
      #     Import-Module ADDSDeployment
      #     Install-ADDSForest `
      #       -DomainName "titan.com" `
      #       -SafeModeAdministratorPassword (ConvertTo-SecureString "P@ssw0rd!" -AsPlainText -Force) `
      #       -CreateDNSDelegation:$false `
      #       -DatabasePath "C:\Windows\NTDS" `
      #       -LogPath "C:\Windows\NTDS" `
      #       -SysvolPath "C:\Windows\SYSVOL" `
      #       -InstallDNS:$true `
      #       -Force:$true
      #       -ForestMode "Win2016" `
      #       -DomainMode "Win2016"
      #     </powershell>  

  SecurityGroup01:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow RDP access to EC2 Instance"
      VpcId: !Ref VPC01
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3389
        ToPort: 3389
        CidrIp: 0.0.0.0/0
  # Subnet02:
  #   Type: AWS::EC2::Subnet
  #   Properties:
  #     VpcId: !Ref VPC01
  #     CidrBlock: 10.0.2.0/24
  #     AvailabilityZone: us-east-1b
  #     Tags:
  #     - Key: Name
  #       Value: Subnet02

  # NACL01:
  #   Type: AWS::EC2::NetworkAcl
  #   Properties:
  #     VpcId: !Ref VPC01
  #     Tags:
  #     - Key: Name
  #       Value: NACL01

  # NACLSubnetAssociation01:
  #   Type: AWS::EC2::SubnetNetworkAclAssociation
  #   Properties:
  #     SubnetId: !Ref Subnet02
  #     NetworkAclId: !Ref NACL01

  # NACLEntry01:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     NetworkAclId: !Ref NACL01
  #     RuleNumber: 100
  #     Protocol: 6
  #     RuleAction: deny
  #     Egress: false
  #     CidrBlock: 0.0.0.0/0
  #     PortRange:
  #       From: 3389
  #       To: 3389

  # NACLEntry02:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     NetworkAclId: !Ref NACL01
  #     RuleNumber: 200
  #     Protocol: -1
  #     RuleAction: allow
  #     Egress: false
  #     CidrBlock: 0.0.0.0/0

  # NACLEntry03:
  #   Type: AWS::EC2::NetworkAclEntry
  #   Properties:
  #     NetworkAclId: !Ref NACL01
  #     RuleNumber: 100
  #     Protocol: -1
  #     RuleAction: allow
  #     Egress: true
  #     CidrBlock: 0.0.0.0/0

  # EC2Instance02:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-08a907777e5410897 # Windows Server 2019 Base
  #     InstanceType: t2.micro
  #     KeyName: TestKeyPair08
  #     NetworkInterfaces:
  #     - AssociatePublicIpAddress: true
  #       DeviceIndex: 0
  #       SubnetId: !Ref Subnet02
  #       GroupSet:
  #       - Fn::GetAtt:
  #         - SecurityGroup01
  #         - GroupId
  #     Tags:
  #     - Key: Name
  #       Value: EC2Instance02
